--- a/index.html
+++ b/index.html
@@ -85,20 +85,35 @@
 				   	</a>
 					</div>
 				</div>
-
-				<!-- <div class="home__blob grid">
-					<div class="home__img">
-						<img src="assets/img/home-img.png" alt="home image">
-					</div>
-
-					<img src="assets/img/shape-waw.svg" alt="" class="home__shape-wawes">
-					<img src="assets/img/shape-cir.svg" alt="" class="home__shape-circle">
-				</div> -->
 			</div>
 		</section>
 		<!-- ===== end home ===== -->
+
+		<!-- ===== BANNER ===== -->
+		<section class="banner section">
+			<div class="banner__container container grid">
+				<div class="banner__data">
+					<h1 class="banner__title">Sudah Siap untuk Lulus Seleksi CPNS?</h1>
+					<p class="banner__description">Yuk mulai belajar hari ini dan bersiap untuk bersaing dengan jutaan peserta lainnya!</p>
+
+					<a href="#" class="button button__flex button__orange">
+						Daftar Gratis <i class="ri-arrow-right-line"></i>
+					</a>
+				</div>
+
+				<img src="assets/img/banner-img.png" alt="banner image" class="banner__img">
+			</div>
+		</section>
+		<!-- ===== end banner ===== -->
    </main>
    <!-- ===== end main ===== -->
+
+   <!-- ===== FOOTER ===== -->
+   <footer class="footer">
+		<div class="footer__container container section__border">
+		</div>
+	</footer>
+   <!-- ===== end footer ===== -->
 
    <!-- ===== SCROLLREVEAL ===== -->
 	<script src="assets/js/scrollreveal.min.js"></script>
