--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 				<ul class="nav__list">
 					<li class="nav__item">
-						<a href="#" class="nav__link active-link">Beranda</a>
+						<a href="#home" class="nav__link active-link">Beranda</a>
 					</li>
 					<li class="nav__item">
-						<a href="#" class="nav__link">Keunggulan</a>
+						<a href="#services" class="nav__link">Keunggulan</a>
 					</li>
 					<li class="nav__item">
 						<a href="#" class="nav__link">Fitur</a>
@@ -88,6 +88,175 @@
 			</div>
 		</section>
 		<!-- ===== end home ===== -->
+
+		<!-- ===== SERVICES ===== -->
+		<section class="services section" id="services">
+			<h2 class="section__title">Benefit Belajar Pintar Bersama CPNS38</h2>
+
+			<div class="services__container container grid section__border">
+				<div class="services__card">
+					<div class="service__icon">
+						<i class="ri-layout-4-line"></i>
+					</div>
+
+					<h2 class="services__title">Materi Pilihan</h2>
+					<p class="services__description">
+						Materi dan latihan soal disesuaikan untuk persiapan menghadapi seleksi CPNS. Mengerjakan try out dan latihan soal kapanpun sesuai waktu yang kamu inginkan. Ribuan soal yang tersedia di CPNS38 siap untuk kamu kerjakan.
+					</p>
+
+					<div class="services__border"></div>
+				</div>
+
+				<div class="services__card">
+					<div class="service__icon">
+						<i class="ri-layout-4-line"></i>
+					</div>
+
+					<h2 class="services__title">Menyesuaikan Kisi-kisi</h2>
+					<p class="services__description">
+						CPNS38 selalu update dan menyesuaikan dengan kisi-kisi SKD TWK, TIU & TKP HOTS terbaru.
+					</p>
+
+					<div class="services__border"></div>
+				</div>
+
+				<div class="services__card">
+					<div class="service__icon">
+						<i class="ri-layout-4-line"></i>
+					</div>
+
+					<h2 class="services__title">Event Seru & Menarik</h2>
+					<p class="services__description">
+						Kami sering mengadakan event webinar atau try out serentak dengan sistem ranking untuk memberikan fasilitas belajar terbaik. Event terbuka secara umum atau khusus kepada member CPNS38.
+					</p>
+
+					<div class="services__border"></div>
+				</div>
+
+				<div class="services__card">
+					<div class="service__icon">
+						<i class="ri-layout-4-line"></i>
+					</div>
+
+					<h2 class="services__title">Akses Belajar Praktis & Fleksibel</h2>
+					<p class="services__description">
+						Kami tahu kamu memiliki waktu luang yang berbeda-beda, maka dari itu akses try out dan pembelajaran di CPNS38 dapat diakses kapanpun dan di manapun.
+					</p>
+
+					<div class="services__border"></div>
+				</div>
+			</div>
+
+		</section>
+		<!-- ===== end services ===== -->
+
+		<!-- ===== QUESTIONS ===== -->
+		<section class="questions section" id="services">
+			<h2 class="section__title">Pertanyaan Seputar CPNS38</h2>
+
+			<div class="questions__container container grid section__border">
+				<div class="questions__group grid">
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Bagaimana cara daftar CPNS38?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Kamu bisa klik tombol daftar lalu isi form yang disediakan.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Bagaimana cara upgrade ke Paket Premium / Platinum / Bimbel?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Setelah login, silahkan pilih menu "Beli Paket SKD" lalu pilih paket yang sesuai dengan kebutuhan belajar kamu.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Saya sudah bergabung di Paket Premium, apabila saya ingin upgrade ke Paket Premium/Platinum/Bimbel Online Eksklusif apakah dikenakan biaya utuh?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Tidak, sistem akan otomatis menyesuaikan harga upgrade berdasarkan paket sebelumnya. Sehingga kamu hanya perlu membayar selisihnya saja.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Berapa lama masa berlaku paket CPNS38?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Masa berlaku paket adalah 12 bulan (satu tahun) terhitung sejak tanggal pembelian.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="questions__group grid">
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Saya sudah melakukan pembayaran/transfer, bagaimana selanjutnya?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Setelah melakukan pembayaran mohon berkenan menunggu sekitar 5-10 menit. Apabila pembelian belum berhasil silahkan hubungi kami melalui chat WhatsApp atau DM di Instagram dengan mengirimkan bukti transfer, tim kami dengan senang hati akan membantu anda.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Bagaimana cara mengerjakan try out?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Silakan login ke akun kamu terlebih dahulu. Setelah itu pilih menu "Try Out" dan pilih try out yang ingin dikerjakan.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Saya lupa password akun saya, bagaimana solusinya</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Kamu bisa melakukan reset password melalui halaman yang telah disediakan.
+							</p>
+						</div>
+					</div>
+
+					<div class="questions__item">
+						<header class="questions__header">
+							<h3 class="questions__item-title">Apakah CPNS38 dapat diakses menggunakan smartphone?</h3>
+							<i class="ri-add-line questions__icon"></i>
+						</header>
+						<div class="questions__content">
+							<p class="questions__description">
+								Bisa dong! Kamu dapat mengakses website CPNS38 menggunakan smartphone, laptop atau komputer. Kami sarankan menggunakan browser Chrome atau Firefox versi terbaru supaya lebih optimal, ya!
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- ===== end questions ===== -->
 
 		<!-- ===== BANNER ===== -->
 		<section class="banner section">
